# fastapi-simple-todo

./: README.md  pyproject.toml
app/: initializer.py  main.py
app/api_v1/: api.py  endpoints.py
app/api_v1/endpoints/: todo.py  user.py
app/core/: config.py  db.py  security.py
app/models/: __init__.py  todo.py  user.py
app/repositories/: todo.py  user.py
app/schemas/: todo.py  user.py
app/tests/: fixtures.py  test_todo.py  test_user.py
app/usecases/: exceptions.py  todo.py  user.py
