[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Ricardo Dani <ricardodani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {version = "^0.58.1", extras = ["all"]}

[tool.poetry.dev-dependencies]
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
